<resources>
    <string name="app_name">Succulent Garden</string>

    <string name="activeDormant"> Succulents generally have two seasons in their lifecycle: active growth and dormancy. During their growth season, they like regular watering and fertilizing. For most, that period of growth is from Spring to Fall. Many plants rest (stop putting on growth/enter a dormancy period) from late Fall to early Spring (when temperatures are cool and daylight length is short) and during mid-Summer, when temperatures are at their peak.</string>
    <string name="climate">Succulents thrive in temperate climate. You should check what zone you live in to determine what will and won\'t survive in your region based on the climate. You don\'t want to bring home a succulent that thrives in warm temperatures only to watch it die when 6 months of winter arrive.   </string>
    <string name= "containers"> Good containers are ones that are breathable, will prevent water from building up and allow succulent roots to dry quickly. A good example of such a container is a terra cotta pot. You can also plant succulents in ceramic, plastic or metal containers so long as there\'s some sort of hole for drainage. Glass containers are okay but they are most difficult to work with as they don't allow the plant roots to dry out quickly.</string>
    <string name= "fertilizer"> Most succulents need very little fertilizer. Watering with a well balanced fertilizer (10&#8211;10&#8211;10 fertilizer diluted to 1&#188;4 strength) once a month will be all they need during their active growth periods. They do not need to be fertilized during dormant periods. </string>


    <string name="indoorStarter"> When picking succulents, it is important to know that some varieties are better suited for indoor growth. Choosing succulents that do not need full sun or prefer shade or low light are better options for indoor growth. A few good beginner varieties that thrive indoors include: Zebra plants, Jades, Gasterias, Vicks</string>
    <string name="indoorLight"> Most succulent varieties will need at least a half day to a full dat of sunlight. In extremely hot areas, it is recommended to move your plants to some afternoon shade when the sun is at its peak. When growing succulents indoors ,place the plant next to the sunniest window in the home for at least 6 hours a day. South-facing windows are likely to provide the most sunlight throughout the day.</string>
    <string name= "indoorSoil"> Good draining soil is essential to a thriving succulent! Purchasing cactus soil or incorporating sand, gravel or volcanic rock into your soil will allow for better drainage. If the container you are using does not have a drainage hole, ass crushed rock at the bottom of the container prior to adding soil and planting your succulent. </string>
    <string name= "indoorWater"> General rule of thumb for watering succulents: only water when the soil is dry; never when wet, damp or moist. Let the succulent dry completely, then wait a few days before watering again. If if takes five days for the soil to completely dry through, water every five days. If you\'re unsure if it\s truly fully dried, wait a couple more days. Succulents pump up their leaves to retain water so waiting an extra day or so to be completely sure your soil is dry before watering again won't be the end of the world for them. You'll know you have watered enough when the water exists the drainage hole. Let the succulent dry completely, then wait a few days before watering again.  </string>

    <string name="outdoorStarter"> When choosing succulents for outdoor growth, it is even more important than ever to consider climate! If you live in colder climates, good beginner varieties include: Aeoniums, Semperveriums, Sedums. If you live in warmer climates, good beginner varieties include: Cacti, Agaves, Aloes, Echevaria </string>
    <string name="outdoorLight"> Succulents bought online or at a nursery are often stored in shady areas and must get acclimated to their new outdoor conditions when you bring them home. If the plants aren\'t used to the amount or strength of sun in your outdoor area, they can become sunburnt and even die. Position your plants in a shady area or somewhere they can consume indirect sun exposure when you bring them home. If you want your plants to eventually live in an area with more direct exposure to the sun, acclimate them early in springtime when the sun and temperatures aren\'t as strong. Be wary that too much direct afternoon sunlight may lead to sunburn. To avoid this, place your succulents in an area that gets a lot of morning sun and afternoon shade. Morning sun is cooler and less likely to cause sunburn.  </string>
    <string name= "outdoorSoil"> Succulents will grow in most outdoor soils, with the exception of clay-like or compact soils. If the soil you have retains too much water, consider adding particles, crushed granite, coarse grain sand or perlite to promote drainage. When planting in a garden, make sure that particular area drains well and is not in a low spot that will stay wet and rot the roots. </string>
    <string name= "outdoorWater"> With more sun exposure, outdoor succulents may require more watering than indoor suculents as the soil may dry up faster. The same rule of thumb applies: water when the soil is dry; never when wet, damp or moist. </string>

    <string name="overwatering"> Succulents don\'t like to be in water for extended periods of time. Overwatering will lead to plants\' roots rotting. Follow the rule of thumb: water when the soil is dry, never when wet, damp or moist. </string>
    <string name="badsoil"> Bad soil is the biggest killer of succulents. Soil that is too dense will not drain quickly enough and will eventually lead to root rot.</string>
    <string name="poordrainage"> If your succulent lives in a container without drainage, they may sit in the water for too long and once again, die from root rot.</string>
    <string name="lackoflighting">The biggest sign that your succulent is not getting enough sunlight is that it will start reaching - a process illustrated by long, weak steams with gaps between petals, color loss and a leggy look. To prevent this, position your plant near an area that receives direct sunlight for at least 6 hours each day, or invest in an indoor grow-light. </string>
    <string name="sunburn"> If you start noticing black spots on the leaves or a white&#8211;ish hue all over your succulent, then your plant may be experiencing too much sun exposure. If you grow them outdoors in bright sun, acclimate them early in the season or around springtime when the sun and temperatures aren\'t as strong. Be wary that too much direct afternoon sunlight may lead to sunburn. To avoid this, place your succulents in an area that gets a lot of morning sun and afternoon shade. Morning sun is cooler and less likely to cause sunburn. </string>
    <string name="spraybottle"> When watering your plants, you want the water to reach all the wya down the soil, to where the roots of the plant are. Something like spraybottles simply can\'t accomplish this. You also run the risk of mold growth if you're spraying the leaves and not the soil. Drench and drain that dirt. </string>


</resources>
