<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".warningSigns"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="WARNING SIGNS"
            android:textAlignment="center"
            android:textColor="#AAC2A9"
            android:textSize="40sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/overwatering"
            android:textColor="#AAC2A9"
            android:paddingTop="16dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/badsoil"
            android:textColor="#AAC2A9"
            android:paddingTop="16dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/poordrainage"
            android:textColor="#AAC2A9"
            android:paddingTop="16dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lackoflighting"
            android:textColor="#AAC2A9"
            android:paddingTop="16dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sunburn"
            android:textColor="#AAC2A9"
            android:paddingTop="16dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spraybottle"
            android:textColor="#AAC2A9"
            android:paddingTop="16dp"
            />


    </LinearLayout>

</ScrollView>
